[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rankigi"
version = "1.0.0"
description = "RANKIGI Python SDK — tamper-evident audit trails for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Rankigi", email = "hello@rankigi.com" }]
keywords = ["ai", "agents", "governance", "audit", "compliance", "langchain", "observability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
signing = ["cryptography>=41"]
dev = ["pytest>=7", "pytest-timeout>=2", "cryptography>=41"]

[project.urls]
Homepage = "https://rankigi.com"
Documentation = "https://rankigi.com/docs"
Repository = "https://github.com/rankigi/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/rankigi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
